# electronics_project_1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
hardware/: #auto_saved_files#  alimentador automatico para pets.kicad_pcb  alimentador automatico para pets.kicad_prl  alimentador automatico para pets.kicad_pro  alimentador automatico para pets.kicad_sch  alimentador automatico para pets.xml  fp-info-cache  fp-lib-table  sym-lib-table
hardware/3d_models/: HI-LINK HLK-PM01 3W 5VDC v1.step
hardware/Gerber/: alimentador automatico para pets-B_Cu.gbr  alimentador automatico para pets-B_Mask.gbr  alimentador automatico para pets-B_Paste.gbr  alimentador automatico para pets-B_Silkscreen.gbr  alimentador automatico para pets-Edge_Cuts.gbr  (+5 more)
main/: CMakeLists.txt  main.c
main/components/esp32-i2c-lcd1602/: i2c-lcd1602.c  i2c-lcd1602.h
main/components/esp32-smbus/: smbus.h
main/devices/ac_check/: ac_check.c  ac_check.h
main/devices/buttons/: buttons.c  buttons.h
main/devices/buzzer/: buzzer.c  buzzer.h
main/devices/display_LCD/: display_LCD.c  display_LCD.h
main/devices/encoder/: encoder.c  encoder.h
main/devices/load_sensor/: load_sensor.c  load_sensor.h
main/devices/proximity_sensor/: proximity_sensor.c  proximity_sensor.h
main/devices/rtc/: rtc.c  rtc.h
main/devices/servo_motor/: servo_motor.c  servo_motor.h
structure_model/: Funil base quadrada ligado a base redonda+ligaçao.FCStd  Projeto_Alimentador3.0.FCStd  mecanica.step  structure_model-Rotation tube.step  structure_model.FCStd  structure_model.FCStd1
(+23 files in other folders)
