idf_component_register(SRCS "main.c" "devices/buttons/buttons.c" "devices/display_LCD/display_LCD.c" 
                            "devices/encoder/encoder.c" "devices/load_sensor/load_sensor.c" 
                            "devices/proximity_sensor/proximity_sensor.c" "devices/rtc/rtc.c"
                            "devices/servo_motor/servo_motor.c"
                    INCLUDE_DIRS ".")
